--- a/UNGOC/UNGOC.csproj
+++ b/UNGOC/UNGOC.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SteveAPI\Dummy.cs" />
+    <Compile Include="Translation.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
